--- a/src/components/NewsBanner/styles.module.css
+++ b/src/components/NewsBanner/styles.module.css
@@ -1,7 +1,9 @@
 .banner {
   display: flex;
-  width: 100%;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   gap: 32px;
 }
 
